--- a/index.html
+++ b/index.html
@@ -11,10 +11,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- js for navbar mobile -->
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <h1>Hello There</h1>
+    <nav class="navbar">
+        <div class="brand-title">G3 Architects</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Login</a></li>
+
+            </ul>
+        </div>
+    </nav>
+    <header></header>
 </body>
 
 </html>
