--- a/index.html
+++ b/index.html
@@ -33,7 +33,109 @@
             </ul>
         </div>
     </nav>
-    <header></header>
+    <header>
+        <h1>Brand New Group of Architects</h1>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button>Explore More</button>
+        <img src="images/banner.png" alt="">
+    </header>
+
+    <article class="features__list">
+        <div>
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+        </div>
+        <div>
+            <h2>Quick list of Our Features</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button>Explore More</button>
+        </div>
+    </article>
+
+    <article class="features__two">
+        <div>
+            <h2>Features you will love & enjoy</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div>
+                <h5>Dexktop & Mobile Version</h5>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div>
+                <h5>Drag & Drop Builder</h5>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div>
+                <h5>Awesome Modern Design</h5>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+            <div>
+                <h5>Super Easy to Edit</h5>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            </div>
+        </div>
+        <div>
+            <img src="images/architect.png" alt="">
+            <div>
+                <h1>10+ Year</h1>
+                <p>Experience</p>
+            </div>
+        </div>
+    </article>
+
+    <article class="facts">
+        <h2>Some Facts</h2>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div>
+            <div class="facts__card">
+                <img src="images/icons/ribon.png" alt="">
+                <h2>54</h2>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="facts__card">
+                <img src="images/icons/projects.png" alt="">
+                <h2>1458</h2>
+                <p>Project Finished</p>
+            </div>
+            <div class="facts__card">
+                <img src="images/icons/customers.png" alt="">
+                <h2>590</h2>
+                <p>Clients Worked</p>
+            </div>
+            <div class="facts__card">
+                <img src="images/icons/email.png" alt="">
+                <h2>22578</h2>
+                <p>Email Send</p>
+            </div>
+        </div>
+    </article>
+
+    <article class="sponsors">
+        <h2>Our Sponsors</h2>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div>
+            <div class="sponsor__img">
+                <img src="images/sponsors/spotify.png" alt="">
+            </div>
+            <div class="sponsor__img">
+                <img src="images/sponsors/amazon.png" alt="">
+            </div>
+            <div class="sponsor__img">
+                <img src="images/sponsors/google.png" alt="">
+            </div>
+            <div class="sponsor__img">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+            <div class="sponsor__img">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </div>
+    </article>
+
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 
 </html>
