header style complete

--- a/index.html
+++ b/index.html
@@ -16,29 +16,34 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="brand-title">G3 Architects</div>
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
-        <div class="navbar-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Login</a></li>
-
-            </ul>
+    <div class="header__bg">
+        <div class="container">
+            <nav class="navbar">
+                <div class="brand-title">G3 Architects</div>
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
+                <div class="navbar-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Login</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <header>
+                <div class="text__center">
+                    <h1>Brand New Group of Architects</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button>Explore More</button>
+                </div>
+                <img src="images/banner.png" alt="">
+            </header>
         </div>
-    </nav>
-    <header>
-        <h1>Brand New Group of Architects</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button>Explore More</button>
-        <img src="images/banner.png" alt="">
-    </header>
+    </div>
 
     <article class="features__list">
         <div>
