--- a/index.html
+++ b/index.html
@@ -46,43 +46,53 @@
     </div>
 
     <article class="features__list">
-        <div>
-            <img src="images/team1.png" alt="">
-            <img src="images/team2.png" alt="">
-            <img src="images/team3.png" alt="">
-            <img src="images/team4.png" alt="">
-        </div>
-        <div>
-            <h2>Quick list of Our Features</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button>Explore More</button>
+        <div class="container">
+            <div class="features__img">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="text__center">
+                <h2>Quick list of Our <span style="color:#FF900E">Features</span></h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button>Explore More</button>
+            </div>
         </div>
     </article>
 
-    <article class="features__two">
+    <article class="features__two container">
         <div>
             <h2>Features you will love & enjoy</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <div>
-                <h5>Dexktop & Mobile Version</h5>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <div class="features__card">
+                <div class="card">
+                    <h5>Dexktop & Mobile Version</h5>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
-            <div>
-                <h5>Drag & Drop Builder</h5>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <div class="features__card">
+                <div class="card">
+                    <h5>Drag & Drop Builder</h5>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
-            <div>
-                <h5>Awesome Modern Design</h5>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <div class="features__card">
+                <div class="card">
+                    <h5>Awesome Modern Design</h5>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
-            <div>
-                <h5>Super Easy to Edit</h5>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <div class="features__card">
+                <div class="card">
+                    <h5>Super Easy to Edit</h5>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
             </div>
         </div>
-        <div>
+        <div class="architect">
             <img src="images/architect.png" alt="">
-            <div>
+            <div class="experience">
                 <h1>10+ Year</h1>
                 <p>Experience</p>
             </div>
