--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </nav>
             <header>
-                <div class="text__center">
+                <div class="brand__center">
                     <h1>Brand New Group of Architects</h1>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     <button>Explore More</button>
@@ -53,7 +53,7 @@
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div class="text__center">
+            <div class="list__center">
                 <h2>Quick list of Our <span style="color:#FF900E">Features</span></h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button>Explore More</button>
@@ -99,10 +99,12 @@
         </div>
     </article>
 
-    <article class="facts">
-        <h2>Some Facts</h2>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-        <div>
+    <article class="container">
+        <div class="fact__center">
+            <h2>Some Facts</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="facts">
             <div class="facts__card">
                 <img src="images/icons/ribon.png" alt="">
                 <h2>54</h2>
