mobile design complete

--- a/index.html
+++ b/index.html
@@ -128,10 +128,12 @@
         </div>
     </article>
 
-    <article class="sponsors">
-        <h2>Our Sponsors</h2>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-        <div>
+    <article class="sponsors container">
+        <div class="sponsor__center">
+            <h2>Our Sponsors</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </div>
+        <div class="img__flex">
             <div class="sponsor__img">
                 <img src="images/sponsors/spotify.png" alt="">
             </div>
@@ -150,8 +152,10 @@
         </div>
     </article>
 
-    <footer>
-        <p>All rights reserved copyright@2023 startup landing page design</p>
+    <footer class="footer">
+        <div class="container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 
