--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     </div>
 
     <article class="features__list">
-        <div class="container">
-            <div class="features__img">
+        <div class="container feature__flex">
+            <div class="features__img item__1">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div class="list__center">
+            <div class="list__center item__2">
                 <h2>Quick list of Our <span style="color:#FF900E">Features</span></h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button>Explore More</button>
@@ -62,39 +62,41 @@
     </article>
 
     <article class="features__two container">
-        <div>
-            <h2>Features you will love & enjoy</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <div class="features__card">
-                <div class="card">
-                    <h5>Dexktop & Mobile Version</h5>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+        <div class="features__two__flex">
+            <div class="item__1">
+                <h2>Features you will love & enjoy</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features__card">
+                    <div class="card">
+                        <h5>Dexktop & Mobile Version</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="features__card">
+                    <div class="card">
+                        <h5>Drag & Drop Builder</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="features__card">
+                    <div class="card">
+                        <h5>Awesome Modern Design</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="features__card">
+                    <div class="card">
+                        <h5>Super Easy to Edit</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
                 </div>
             </div>
-            <div class="features__card">
-                <div class="card">
-                    <h5>Drag & Drop Builder</h5>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <div class="architect item__2">
+                <img src="images/architect.png" alt="">
+                <div class="experience">
+                    <h1>10+ Year</h1>
+                    <p>Experience</p>
                 </div>
-            </div>
-            <div class="features__card">
-                <div class="card">
-                    <h5>Awesome Modern Design</h5>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-            </div>
-            <div class="features__card">
-                <div class="card">
-                    <h5>Super Easy to Edit</h5>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-                </div>
-            </div>
-        </div>
-        <div class="architect">
-            <img src="images/architect.png" alt="">
-            <div class="experience">
-                <h1>10+ Year</h1>
-                <p>Experience</p>
             </div>
         </div>
     </article>
@@ -102,7 +104,7 @@
     <article class="container">
         <div class="fact__center">
             <h2>Some Facts</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
         </div>
         <div class="facts">
             <div class="facts__card">
