--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </nav>
             <header>
                 <div class="brand__center">
-                    <h1>Brand New Group of Architects</h1>
+                    <h1>Brand New <br> Group of Architects</h1>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                     <button>Explore More</button>
                 </div>
@@ -154,11 +154,11 @@
         </div>
     </article>
 
-    <footer class="footer">
-        <div class="container">
+    <div class="container">
+        <footer class="footer">
             <p>All rights reserved copyright@2023 startup landing page design</p>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 
 </html>
