--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="list__center item__2">
-                <h2>Quick list of Our <span style="color:#FF900E">Features</span></h2>
+                <h2><span style="color:#727272">Quick list</span> of Our <span style="color:#FF900E">Features</span></h2>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button>Explore More</button>
             </div>
